# simpleRPG

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
doc/: classDiagram.drawio
include/: Character.h  Enemy.h  GameEngine.h
include/attackStrategy/: AggressiveAttack.h  AttackStrategy.h  NormalAttack.h
include/character/: Enemy.h
include/character/player/: Archer.h  Mage.h  Player.h  PlayerFactory.h  Warrior.h
include/observer/: LowHealthObserver.h  Observer.h
include/player/: Archer.h  Mage.h  Player.h  PlayerFactory.h  Warrior.h
src/: CMakeLists.txt  Character.cpp  Enemy.cpp  GameEngine.cpp  main.cpp
src/attackStrategy/: AggressiveAttack.cpp  CMakeLists.txt  NormalAttack.cpp
src/character/: CMakeLists.txt  Character.cpp  Enemy.cpp
src/character/player/: Archer.cpp  CMakeLists.txt  Mage.cpp  Player.cpp  PlayerFactory.cpp  Warrior.cpp
src/observer/: CMakeLists.txt  LowHealthObserver.cpp
src/player/: Archer.cpp  Mage.cpp  Player.cpp  PlayerFactory.cpp  Warrior.cpp
tests/: CMakeLists.txt  test_Archer.cpp  test_Warrior.cpp
